crates/ty_python_semantic/resources/mdtest/snapshots/unsafe_tuple_subclas…_-_Unsafe_Tuple_Subclas…_-_`__bool__`_(79170cfc5495ebe2).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: unsafe_tuple_subclass.md - Unsafe Tuple Subclass - `__bool__`
mdtest path: crates/ty_python_semantic/resources/mdtest/unsafe_tuple_subclass.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class A(tuple):
 2 |     # error: [unsafe-tuple-subclass]
 3 |     def __bool__(self):
 4 |         return False
 5 | 
 6 | class B(tuple):
 7 |     # error: [unsafe-tuple-subclass]
 8 |     __bool__ = None
 9 | 
10 | class C(tuple):
11 |     # error: [unsafe-tuple-subclass]
12 |   __bool__ = lambda self: False
```

# Diagnostics

```
warning[unsafe-tuple-subclass]: Invalid override of method `__bool__`
 --> src/mdtest_snippet.py:3:9
  |
1 | class A(tuple):
2 |     # error: [unsafe-tuple-subclass]
3 |     def __bool__(self):
  |         ^^^^^^^^^^^^^^ Definition is incompatible with 
4 |         return False
  |
info: rule `unsafe-tuple-subclass` is enabled by default

```

```
warning[unsafe-tuple-subclass]: Invalid override of method `__bool__`
  --> src/mdtest_snippet.py:8:5
   |
 6 | class B(tuple):
 7 |     # error: [unsafe-tuple-subclass]
 8 |     __bool__ = None
   |     ^^^^^^^^^^^^^^^ Definition is incompatible with 
 9 |
10 | class C(tuple):
   |
info: rule `unsafe-tuple-subclass` is enabled by default

```

```
warning[unsafe-tuple-subclass]: Invalid override of method `__bool__`
  --> src/mdtest_snippet.py:12:3
   |
10 | class C(tuple):
11 |     # error: [unsafe-tuple-subclass]
12 |   __bool__ = lambda self: False
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with 
   |
info: rule `unsafe-tuple-subclass` is enabled by default

```
